Added responsiveness to main page and icons to contact page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <!--- CSS File -->
     <link rel="stylesheet" href="styles.css">
+    <!--- Icons -->
+    <script src="https://kit.fontawesome.com/bb4a4cd379.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -27,11 +30,12 @@
     <main>
         <section id="contact">
             <div class="contact-info">
-                <ul>
-                    <li><a class="email" aria-label="Email" href="mailto: tino.alakari@gmail.com">E-mail: tino.alakari@gmail.com</a></li>
-                    <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/lowershoal/">Instagram: Lowershoal</a></li>
-                    <li><a class="linkedin" aria-label="Linkedin" href="https://uy.linkedin.com/in/tino-alakari-aa3432a7">Linkedin: Tino Alakari</a></li>
-                    <li><a class="github" aria-label="GitHub" href="https://github.com/AlaTino">GitHub: AlaTino</a></li>
+                <h3>Don't hesitate to reach out for questions or comments!</h3>
+                <ul class="social-icons">
+                    <li><a class="email" aria-label="Email" href="mailto: tino.alakari@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+                    <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/lowershoal/"><i class="fab fa-instagram"></i></li>
+                    <li><a class="linkedin" aria-label="Linkedin" href="https://uy.linkedin.com/in/tino-alakari-aa3432a7"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a class="github" aria-label="GitHub" href="https://github.com/AlaTino"><i class="fab fa-github"></i></a></li>
                 </ul>
             </div>
         </section>
