--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <!-- CSS Styles-->
     <link rel="stylesheet" href="styles.css">
+    <!-- Scripts -->
     <script src="/script.js"></script>
+    <script src="https://kit.fontawesome.com/bb4a4cd379.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -32,7 +35,7 @@
                 <div class="about-me-text">
                     <h3>Hi, I am Tino</h3>
                     <h4>Aspiring Web Designer</h4>
-                    <button onclick="displayText()" class="btn"><span>About Me</span><i class="arrow down"></i></button>
+                    <button onclick="displayText()" class="btn"><span>About Me</span><i class="fa-solid fa-arrow-down" style="color: white;"></i></button>
                 </div>
                 <div class="profile">
                     <img src="/sources/Images/mascot.png" alt="A Photo of Me" class="portrait">
