--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <!-- CSS Styles-->
     <link rel="stylesheet" href="styles.css">
+    <!-- Scripts -->
+    <script src="/script.js"></script>
+    <script src="https://kit.fontawesome.com/bb4a4cd379.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -27,7 +31,30 @@
     <main>
         <section id="projects">
             <div class="project-info">
-                
+                <h3>Here's a snapshot of some of my projects</h3>
+                <div class="project-title">
+                    <div class="firstpage">
+                        <a onclick="displayImg1()"><h4>First page created with HTML and CSS<i class="fa-solid fa-arrow-down"></i></h4></a>
+                        <div id="image1" style="display: none;">
+                            <img src="/sources/Images/FirstPage-min.png">
+                            <h5>Nothing fancy, learning the basics of building with HTML and styling with CSS</h5>
+                        </div>
+                    </div>
+                    <div class="innergrowth">
+                        <a onclick="displayImg2()"><h4>Inner Growth<i class="fa-solid fa-arrow-down"></i></h4></a>
+                        <div id="image2" style="display: none;">
+                            <img src="/sources/Images/InnerGrowth-min.png">
+                            <h5>In this project I practiced using flex-box in CSS</h5>
+                        </div>
+                    </div>
+                    <div class="responsiveDesign">
+                        <a onclick="displayImg3()"><h4>Responsive Design<i class="fa-solid fa-arrow-down"></i></h4></a>
+                        <div id="image3" style="display: none;">
+                            <img src="/sources/Images/LazyHound-min.png">
+                            <h5>This was a practice project for learning responsive design</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
